exports[`Storyshots _Resize_ onResize 1`] = `
<div
  style={
    Object {
      "height": "200vh",
    }
  } />
`;

exports[`Storyshots _Resize_ onResizeEnd with info 1`] = `
<div
  style={
    Object {
      "height": "200vh",
    }
  } />
`;

exports[`Storyshots _Resize_ with raf throttle 1`] = `
<div
  style={
    Object {
      "height": "200vh",
    }
  } />
`;

exports[`Storyshots _Scroll_ logs to console 1`] = `
<div
  style={
    Object {
      "height": "200vh",
    }
  } />
`;

exports[`Storyshots _Scroll_ logs to console scrollEnd with info 1`] = `
<div
  style={
    Object {
      "height": "200vh",
    }
  } />
`;

exports[`Storyshots _Scroll_ logs to console with raf throttle 1`] = `
<div
  style={
    Object {
      "height": "200vh",
    }
  } />
`;

exports[`Storyshots Animate_ click to change animation Style_View 1`] = `
<div
  className={
    Object {
      "data-css-mum9wf": "",
    }
  }
  onClick={[Function]}
  style={undefined}>
  <span
    data-css-49e0el="">
    Click me
  </span>
</div>
`;

exports[`Storyshots Animate_ click to custom animation Style_View 1`] = `
<div
  className={
    Object {
      "data-css-mum9wf": "",
    }
  }
  onClick={[Function]}
  style={undefined}>
  <span
    data-css-49e0el="">
    Click me
  </span>
</div>
`;

exports[`Storyshots Animate_ click to fadeIn Style_View 1`] = `
<div
  className={
    Object {
      "data-css-ce8gmj": "",
    }
  }
  onClick={[Function]}
  style={undefined}>
  <span
    data-css-49e0el="">
    Click me
  </span>
</div>
`;

exports[`Storyshots Animate_ fadeIn Style_View with repeat and delay 1`] = `
<div
  className={
    Object {
      "data-css-5ly3h2": "",
    }
  }
  style={undefined}>
  <span
    data-css-49e0el="">
    I fade in
  </span>
</div>
`;

exports[`Storyshots BackgroundImage with Col centered child 1`] = `
<div
  data-css-1wqgk2p="">
  <div
    alignItems="center"
    className={
      Object {
        "data-css-19b70af": "",
      }
    }
    justifyContent="center"
    style={undefined}>
    I am child text
  </div>
</div>
`;

exports[`Storyshots BackgroundImage with children 1`] = `
<div
  data-css-1wqgk2p="">
  I am child text
</div>
`;

exports[`Storyshots BackgroundImage with maxWidth 1`] = `
<div
  data-css-7f1w3q="" />
`;

exports[`Storyshots BackgroundImage without children 1`] = `
<div
  data-css-1wqgk2p="" />
`;

exports[`Storyshots Button with text child 1`] = `
<button
  data-css-1fnlr2="">
  This is a button
</button>
`;

exports[`Storyshots Col align center 1`] = `
<div
  className={
    Object {
      "data-css-6hauop": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Col justify and align center 1`] = `
<div
  className={
    Object {
      "data-css-y9xjn6": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Col justify center 1`] = `
<div
  className={
    Object {
      "data-css-1v3dx8x": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Col with children 1`] = `
<div
  className={
    Object {
      "data-css-1ngtchj": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
      }
    } />
</div>
`;

exports[`Storyshots Event_ Hover Event_Style_View joined transitions 1`] = `
<div
  className={
    Object {
      "data-css-1m28lj9": "",
    }
  }
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={undefined}>
  <span
    data-css-49e0el="">
    Hover me
  </span>
</div>
`;

exports[`Storyshots Event_ Hoverable Style_View 1`] = `
<div
  className={
    Object {
      "data-css-1t3gqdq": "",
    }
  }
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={undefined}>
  <div
    className={
      Object {
        "data-css-13tlp1q": "",
      }
    }
    style={undefined}>
    <span
      data-css-49e0el="">
      Hover me
    </span>
  </div>
</div>
`;

exports[`Storyshots Event_ Rotate onClick Event_View 1`] = `
<button
  className={
    Object {
      "data-css-f7yvp6": "",
    }
  }
  onClick={[Function]}
  style={undefined}>
  <span
    data-css-49e0el="">
    Click me
  </span>
</button>
`;

exports[`Storyshots Native-View animated 1`] = `
<div
  animated={true}
  className={
    Object {
      "data-css-1nysi96": "",
    }
  }
  style={undefined} />
`;

exports[`Storyshots Native-View centered 1`] = `
<div
  className={
    Object {
      "data-css-z2bxwo": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-qbjfhe": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots Native-View with childen 1`] = `
<div
  className={
    Object {
      "data-css-1nysi96": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-jvtmi7": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-1re6eho": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-1g2o6mi": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots Playground Hoverable Style_View 1`] = `
<div
  className={
    Object {
      "data-css-1t3gqdq": "",
    }
  }
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={undefined}>
  <div
    className={
      Object {
        "data-css-13tlp1q": "",
      }
    }
    style={undefined}>
    <span
      data-css-49e0el="">
      Hover me
    </span>
  </div>
</div>
`;

exports[`Storyshots Row align center 1`] = `
<div
  className={
    Object {
      "data-css-412fk4": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Row justify align center 1`] = `
<div
  className={
    Object {
      "data-css-1gxjx63": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Row justify center 1`] = `
<div
  className={
    Object {
      "data-css-1w2xbyh": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Row with children 1`] = `
<div
  className={
    Object {
      "data-css-1guocaa": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
        "width": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
        "width": 20,
      }
    } />
</div>
`;

exports[`Storyshots Style_ Style_Views inside a Style_View 1`] = `
<div
  className={
    Object {
      "data-css-lzxjyf": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-qsade6": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-13cr0bs": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-mv5v5e": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots Style_ nested Style_s combine 1`] = `
<div
  className={
    Object {
      "data-css-1wu40af": "",
    }
  }
  style={undefined} />
`;

exports[`Storyshots Text antialiased 1`] = `
<span
  data-css-xrz6p9="">
  this is antialiased text
</span>
`;

exports[`Storyshots Text bold 1`] = `
<span
  data-css-1twrs2w="">
  this is bold text
</span>
`;

exports[`Storyshots Text default 1`] = `
<span
  data-css-49e0el="">
  this is text
</span>
`;

exports[`Storyshots Text ellipsis 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "width": 50,
    }
  }>
  <span
    data-css-z0sywu="">
    this is clipped text with an ellipsis
  </span>
</div>
`;

exports[`Storyshots Text italic 1`] = `
<span
  data-css-9e57sy="">
  this is italic text
</span>
`;

exports[`Storyshots Text size, height, spacing, color 1`] = `
<span
  data-css-1ni945p="">
  this is more interesting text
</span>
`;

exports[`Storyshots Text underline 1`] = `
<span
  data-css-wsxaaf="">
  this is underlined text
</span>
`;

exports[`Storyshots Text underline and strikethrough 1`] = `
<span
  data-css-lcoi2d="">
  this is text
</span>
`;

exports[`Storyshots Text uppercase 1`] = `
<span
  data-css-qhu16="">
  this is uppercased text
</span>
`;

exports[`Storyshots TransitionGroupView 2000ms enterDuration 1`] = `
<div
  className={
    Object {
      "data-css-1ngtchj": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-17n2bgv": "",
      }
    }
    data-css-1tmituy=""
    style={undefined} />
  <div
    className={
      Object {
        "data-css-17n2bgv": "",
      }
    }
    data-css-1tmituy=""
    style={undefined} />
  <div
    className={
      Object {
        "data-css-17n2bgv": "",
      }
    }
    data-css-1tmituy=""
    style={undefined} />
</div>
`;

exports[`Storyshots TransitionGroupView enter with green, leave with red 1`] = `
<div
  className={
    Object {
      "data-css-1ngtchj": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-17n2bgv": "",
      }
    }
    data-css-1tmituy=""
    style={undefined} />
  <div
    className={
      Object {
        "data-css-17n2bgv": "",
      }
    }
    data-css-1tmituy=""
    style={undefined} />
  <div
    className={
      Object {
        "data-css-17n2bgv": "",
      }
    }
    data-css-1tmituy=""
    style={undefined} />
</div>
`;

exports[`Storyshots TransitionGroupView passes props to parent View 1`] = `
<div
  className={
    Object {
      "data-css-qfmu3u": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-oo79yq": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-oo79yq": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-oo79yq": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots TransitionGroupView renders children 1`] = `
<div
  className={
    Object {
      "data-css-1ngtchj": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-oo79yq": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-oo79yq": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-oo79yq": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots TransitionGroupView renders without null, undefined, and false children 1`] = `
<div
  className={
    Object {
      "data-css-1ngtchj": "",
    }
  }
  style={undefined} />
`;

exports[`Storyshots Video has controls and muted 1`] = `
<video
  autoPlay={true}
  controls={true}
  muted={true}
  src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4" />
`;

exports[`Storyshots Video pauses 1`] = `
<video
  autoPlay={true}
  controls={true}
  muted={true}
  src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4" />
`;

exports[`Storyshots Video plays a video 1`] = `
<video
  autoPlay={true}
  src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4" />
`;

exports[`Storyshots Video repeat 1`] = `
<video
  autoPlay={true}
  controls={true}
  loop={true}
  muted={true}
  src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4" />
`;

exports[`Storyshots Video source child 1`] = `
<video
  autoPlay={true}
  muted={true}>
  <source
    src="http://www.html5rocks.com/en/tutorials/video/basics/devstories.mp4"
    type="video/mp4" />
</video>
`;

exports[`Storyshots View alignVertical center alignHorizontal right 1`] = `
<div
  className={
    Object {
      "data-css-lzxjyf": "",
    }
  }
  style={undefined}>
  <div
    backgroundColor="red"
    className={
      Object {
        "data-css-18sjg4i": "",
      }
    }
    style={undefined} />
  <div
    backgroundColor="green"
    className={
      Object {
        "data-css-18sjg4i": "",
      }
    }
    style={undefined} />
  <div
    backgroundColor="blue"
    className={
      Object {
        "data-css-18sjg4i": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots View center shorthand 1`] = `
<div
  className={
    Object {
      "data-css-10mbtw1": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-qsade6": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-13cr0bs": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-mv5v5e": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots View click to set \`hidden\` 1`] = `
<div
  className={
    Object {
      "data-css-13cr0bs": "",
    }
  }
  onClick={[Function]}
  style={undefined} />
`;

exports[`Storyshots View fit shorthand 1`] = `
<div
  style={
    Object {
      "border": "5px solid lightgrey",
      "height": 500,
      "width": 500,
    }
  }>
  <div
    className={
      Object {
        "data-css-cz2fuv": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots View inline green and blue 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-qsade6": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-kbivk9": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-9vhxcg": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots View only using inlineStyle 1`] = `
<div
  className={
    Object {
      "data-css-1ngtchj": "",
    }
  }
  style={
    Object {
      "backgroundColor": "lightgrey",
      "border": "1px solid black",
      "height": 500,
    }
  }>
  <div
    className={
      Object {
        "data-css-1ngtchj": "",
      }
    }
    style={
      Object {
        "backgroundColor": "red",
        "flex": 1,
      }
    } />
  <div
    className={
      Object {
        "data-css-1ngtchj": "",
      }
    }
    style={
      Object {
        "backgroundColor": "green",
        "flex": 1,
      }
    } />
  <div
    className={
      Object {
        "data-css-1ngtchj": "",
      }
    }
    style={
      Object {
        "backgroundColor": "blue",
        "flex": 1,
      }
    } />
</div>
`;

exports[`Storyshots View with children \`grow\` Views 1`] = `
<div
  className={
    Object {
      "data-css-oo79yq": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-7tqhra": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-5h7a3z": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-lth72f": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots View with children divs and inline style 1`] = `
<div
  className={
    Object {
      "data-css-oo79yq": "",
    }
  }
  style={undefined}>
  <div
    style={
      Object {
        "backgroundColor": "red",
        "height": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "green",
        "height": 20,
      }
    } />
  <div
    style={
      Object {
        "backgroundColor": "blue",
        "height": 20,
      }
    } />
</div>
`;

exports[`Storyshots View with children flex=1 Views and style prop 1`] = `
<div
  className={
    Object {
      "data-css-oo79yq": "",
    }
  }
  style={undefined}>
  <div
    className={
      Object {
        "data-css-y89w49": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-1rtnqf2": "",
      }
    }
    style={undefined} />
  <div
    className={
      Object {
        "data-css-182ssyk": "",
      }
    }
    style={undefined} />
</div>
`;

exports[`Storyshots decorators keydown 1`] = `
<div
  style={
    Object {
      "height": 2000,
      "width": 500,
    }
  }>
  Press any key
</div>
`;

exports[`Storyshots decorators keydown escape 1`] = `
<div
  style={
    Object {
      "height": 2000,
      "width": 500,
    }
  }>
  Press Escape key
</div>
`;

exports[`Storyshots decorators resize 1`] = `
<div
  style={
    Object {
      "height": 2000,
      "width": 500,
    }
  }>
  resize me
</div>
`;

exports[`Storyshots decorators scroll 1`] = `
<div
  style={
    Object {
      "height": 2000,
      "width": 500,
    }
  }>
  scroll me
</div>
`;
